# code-cleaner-pro

./: README.md
code cleaner pro/: .coverage  README.md  pyproject.toml
code cleaner pro/.github/workflows/: test.yml
code cleaner pro/code_cleaner_pro/: __init__.py  __main__.py  core.py
code cleaner pro/code_cleaner_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code cleaner pro/examples/: README.md  basic_example.py  functional_example.py  procedural_to_oop.py
code cleaner pro/path/to/shipment/: Method.php
code cleaner pro/tests/: conftest.py  test_cli.py  test_core.py  test_examples.py  test_llm.py
